# DigitalJanitor

./: .dockerignore  .gitignore  AUDIT.md  Cargo.toml  Dockerfile  PLAN.md  README.md  build.sh  docker-compose.yml  pastdev.md
scripts/: crontab  example-backup.sh
src/: client.rs  crypto.rs  data.rs  error.rs  fuse_mount.rs  index.rs  lib.rs  main.rs  pipeline.rs  pve_agent.rs  repository.rs  server.rs  snapshot.rs  storage.rs  utils.rs
src/backend/: filesystem.rs  mod.rs  s3.rs  sftp.rs
tests/: integration.rs
