[package]
name = "dj"
version = "1.0.0"
edition = "2021"
authors = ["Digital Janitor Team"]
description = "CLI-first backup solution with content-addressable storage"
license = "MIT"
repository = "https://github.com/digitaljanitor/dj"
default-run = "dj"

[[bin]]
name = "dj"
path = "src/main.rs"

[[bin]]
name = "dj-pve-agent"
path = "src/pve_agent.rs"
required-features = ["proxmox"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
aes-gcm = "0.10"
argon2 = "0.5"
zstd = "0.13"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
console = "0.15"
crossbeam-channel = "0.5"
rayon = "1.8"
memmap2 = "0.9"
walkdir = "2.4"
async-trait = "0.1"
bytes = "1.5"
tempfile = "3.8"

# Backend implementations
aws-sdk-s3 = { version = "1.15", optional = true }
rusty-s3 = { version = "0.5", optional = true }
ssh2 = { version = "0.9", optional = true }

# Proxmox integration
reqwest = { version = "0.11", features = ["json"], optional = true }
proxmox-api = { version = "0.1", optional = true }

# Server mode
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }

# FUSE mounting
fuse3 = { version = "0.7", optional = true, features = ["tokio-runtime"] }
fuser = { version = "0.14", optional = true }
libc = { version = "0.2", optional = true }
daemonize = { version = "0.5", optional = true }

# FastCDC implementation
fastcdc = "3.1"
hex = "0.4"
getrandom = "0.2"
hostname = "0.4"
url = "2.4"
rpassword = "7.3"
futures-util = "0.3"

[features]
default = ["s3", "sftp", "mount", "server"]
s3 = ["aws-sdk-s3", "rusty-s3"]
sftp = ["ssh2"]
mount = ["fuse3", "fuser", "libc", "daemonize"]
server = ["axum", "tower", "tower-http", "reqwest"]
proxmox = ["reqwest", "proxmox-api"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
